--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -10,6 +10,10 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
+2015-03-25: Janusz Dobrowolski  Fixed hidden fields output. Fields are displayed after following table end (if any).
+2015-03-25: Janusz Dobrowolski  Additional fix to merged stable branch changes.
+
+
 2015-03-23 16:27 +0100 Joe
 (3456) Release 2.3.23
  version.php
