Synch with Upstream changes till 2015-04-08
Fixed value returned by items_cart's check_qoh method.
Removed obsolete stock_move.person_id field and related handling.
Removed obsolete Movement Types handling.
Removed stock_move.person_id references from stock movements inquiry.
Removed stock_move.person_id references from inventory reports.
Inventory Adjustment: removed obsolete increase/descrease selector from entry form (negative quantities can now be entered just with minus sign).
Inventory Adjustment: removed movement type, cleanups.
Inventory Transfer: removed movement type from transfer form, cleanups.

Removed $type in argument of function add_stock_transfer()
$line_item->qty from form field used instead of $increase from POST in Inventory Adjustments
Reorganised many SQLs to have table aliases
stock_move.person_id now no longer in rep3xx.php Inventory Reports and stock movements inquiry
function get_stock_movements() moved from inventory/includes/db/movement_types_db.inc to inventory/includes/inventory_db.inc
Removed Inventory &Movement Types Menu item from Inventory menu
Moved Inventory &Locations Menu link from left side to right side.
Removed 0_movement_types table and the files inventory/includes/db/movement_types_db.inc and inventory/manage/movement_types.php
Removed stock_movement functions
item cart now updated directly from the form field's $line_item->stock_id

Removed stock_move.person_id field
ALTER TABLE `0_stock_moves` DROP COLUMN `person_id`;

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -10,6 +10,15 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
+2015-04-08 Janusz Dobrowolski  Fixed value returned by items_cart's check_qoh method.
+2015-04-08 Janusz Dobrowolski  Removed obsolete stock_move.person_id field and related handling.
+2015-04-08 Janusz Dobrowolski  Removed obsolete Movement Types handling.
+2015-04-08 Janusz Dobrowolski  Removed stock_move.person_id references from stock movements inquiry.
+2015-04-08 Janusz Dobrowolski  Removed stock_move.person_id references from inventory reports.
+2015-04-08 Janusz Dobrowolski  Inventory Adjustment: removed obsolete increase/descrease selector from entry form (negative quantities can now be entered just with minus sign).
+2015-04-08 Janusz Dobrowolski  Inventory Adjustment: removed movement type, cleanups.
+2015-04-08 Janusz Dobrowolski  Inventory Transfer: removed movement type from transfer form, cleanups.
+
 2015-04-06: Janusz Dobrowolski  Partial (inventory related) include files cleanup. function get_mb_flag($stock_id) moved from  includes/db/manufacturing_db.inc to includes/db/inventory_db.inc 
 2015-04-06: Janusz Dobrowolski  Fixed regression in Sales Kits. 3rd parameter in function update_component($kit_code, $selected_item) dropped 
 2015-04-06: Janusz Dobrowolski  Fixed mysqli related warnings. 
