Upstream Synch till 2015-04-27 Fixed empty(trim)) error in versions prior to php 5.5 https://github.com/FrontAccountingERP/FA/commit/5a261543d3d1b2b3c98fce8c6e6849b39ec62dcc Fixed wrong company path in config.default.php https://github.com/FrontAccountingERP/FA/commit/48ad5d9daab3853cd782682447b76bf5f8af298b Fixes reports display in Windows #1

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -10,6 +10,8 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
+2015-04-27 Joe Hunt            Fixed empty(trim)) error in versions prior to php 5.5 
+2015-04-27 Joe Hunt            Fixed wrong company path in config.default.php
 2015-04-21 Janusz Dobrowolski  Removed obsolete keys on supp_trans and cust_branch tables.
 2015-04-20 Janusz Dobrowolski  After timeout UI was always switched into fallback mode.
 2015-04-20 Janusz Dobrowolski  Fixed source compatibility to PHP 5.0, fixed bug in the password reset feature.
