--- a/core/install/lang/da_DK/LC_MESSAGES/da_DK.po
+++ b/core/install/lang/da_DK/LC_MESSAGES/da_DK.po
@@ -8,17 +8,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE TEAM\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Translation Team <info@frontaccounting.net>\n"
+"Last-Translator: Joe Hunt <joe.hunt.consulting@gmail.com>\n"
 "Language-Team: Translation Team <ll@LL.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Danish\n"
-"X-Poedit-Country: DENMARK\n"
 "X-Poedit-SourceCharset: iso-8859-1\n"
+"Language: da_DK\n"
+"X-Generator: Poedit 1.5.5\n"
 
-#: install/index.php:20
-#: install/index.php:40
+#: install/index.php:20 install/index.php:40
 msgid "FrontAccouting ERP Installation Wizard"
 msgstr "FrontAccounting ERP installationswizard"
 
@@ -31,23 +30,19 @@ msgstr "Trin %d: %s"
 msgid "Chart of accounts"
 msgstr "Kontoplaner"
 
-#: install/index.php:48
-#: install/index.php:75
+#: install/index.php:48 install/index.php:75
 msgid "Encoding"
 msgstr "Kodning"
 
-#: install/index.php:48
-#: install/index.php:75
+#: install/index.php:48 install/index.php:75
 msgid "Description"
 msgstr "Beskrivelse"
 
-#: install/index.php:48
-#: install/index.php:75
+#: install/index.php:48 install/index.php:75
 msgid "Install"
 msgstr "Installer"
 
-#: install/index.php:65
-#: install/index.php:93
+#: install/index.php:65 install/index.php:93
 msgid "Installed"
 msgstr "Installeret"
 
@@ -56,8 +51,12 @@ msgid "Language"
 msgstr "Sprog"
 
 #: install/index.php:123
-msgid "Cannot connect to database. User or password is invalid or you have no permittions to create database."
+msgid ""
+"Cannot connect to database. User or password is invalid or you have no "
+"permittions to create database."
 msgstr ""
+"Kan ikke skabe forbindelse til databasen. Enten er brugernavnet eller "
+"adgangskoden forkert eller også har du ikke adgang til at skabe databasen"
 
 #: install/index.php:159
 msgid "Cannot save system configuration file 'config.php'."
@@ -72,8 +71,12 @@ msgid "Cannot write to the 'config_db.php' configuration file."
 msgstr "Kan ikke skrive til 'config_db.php' konfigurationsfilen."
 
 #: install/index.php:172
-msgid "Configuration file 'config_db.php' is not writable. Change its permissions so it is, then re-run installation step."
-msgstr "Konfigurationsfilen 'config_db.php' er ikke skrivbar. Ändre tilladelsen til det og kör installationenstrinet igen."
+msgid ""
+"Configuration file 'config_db.php' is not writable. Change its permissions "
+"so it is, then re-run installation step."
+msgstr ""
+"Konfigurationsfilen 'config_db.php' er ikke skrivbar. Ändre tilladelsen til "
+"det og kör installationenstrinet igen."
 
 #: install/index.php:211
 msgid "Host name cannot be empty."
@@ -112,20 +115,25 @@ msgid "Select install wizard language:"
 msgstr "Vælg installationswizard sprog:"
 
 #: install/index.php:324
-msgid "All application preliminary requirements seems to be correct. Please press Continue button below."
-msgstr "Alle programmets behov ser ud til at være dækket. Venligst tryk 'Fortsæt' forneden."
+msgid ""
+"All application preliminary requirements seems to be correct. Please press "
+"Continue button below."
+msgstr ""
+"Alle programmets behov ser ud til at være dækket. Venligst tryk 'Fortsæt' "
+"forneden."
 
-#: install/index.php:325
-#: install/index.php:351
-#: install/index.php:358
-#: install/index.php:365
-#: install/index.php:384
+#: install/index.php:325 install/index.php:351 install/index.php:358
+#: install/index.php:365 install/index.php:384
 msgid "Continue >>"
 msgstr "Fortsæt >>"
 
 #: install/index.php:327
-msgid "Application cannot be installed. Please fix problems listed below in red, and press Refresh button."
-msgstr "Programmet kan ikke installeres. Venligst ordne problemerne beskrivet forneden i rødt, og tryk 'Genlæs' knappen."
+msgid ""
+"Application cannot be installed. Please fix problems listed below in red, "
+"and press Refresh button."
+msgstr ""
+"Programmet kan ikke installeres. Venligst ordne problemerne beskrivet "
+"forneden i rødt, og tryk 'Genlæs' knappen."
 
 #: install/index.php:328
 msgid "Refresh"
@@ -155,17 +163,13 @@ msgstr "Database navn:"
 msgid "Use '0_' Table Prefix:"
 msgstr "Brug '0_' tabel prefi:"
 
-#: install/index.php:344
-#: includes/system_tests.inc:38
-#: includes/system_tests.inc:113
-#: includes/system_tests.inc:126
+#: install/index.php:344 includes/system_tests.inc:38
+#: includes/system_tests.inc:113 includes/system_tests.inc:126
 msgid "Yes"
 msgstr "Ja"
 
-#: install/index.php:344
-#: includes/system_tests.inc:38
-#: includes/system_tests.inc:113
-#: includes/system_tests.inc:126
+#: install/index.php:344 includes/system_tests.inc:38
+#: includes/system_tests.inc:113 includes/system_tests.inc:126
 msgid "No"
 msgstr "Nej"
 
@@ -178,16 +182,19 @@ msgid "Install Additional COAs from FA Repository:"
 msgstr "Installer yderligere kontoplaner fra FA's lager (Repository):"
 
 #: install/index.php:348
-msgid "Use table prefix if you share selected database for more than one FA company."
+msgid ""
+"Use table prefix if you share selected database for more than one FA company."
 msgstr "Brug tabel prefix hvis du deler databasen med flere FA firmaer."
 
 #: install/index.php:349
-msgid "Do not select additional langs nor COAs if you have no working internet connection right now. You can install them later."
-msgstr "Vælg ikke yderligere sprog eller kontoplaner hvis du ikke har en fungerende internet forbindelse lige nu. Du kan installere dem senere."
+msgid ""
+"Do not select additional langs nor COAs if you have no working internet "
+"connection right now. You can install them later."
+msgstr ""
+"Vælg ikke yderligere sprog eller kontoplaner hvis du ikke har en fungerende "
+"internet forbindelse lige nu. Du kan installere dem senere."
 
-#: install/index.php:350
-#: install/index.php:357
-#: install/index.php:364
+#: install/index.php:350 install/index.php:357 install/index.php:364
 #: install/index.php:383
 msgid "<< Back"
 msgstr "<< Tilbage"
@@ -360,12 +367,9 @@ msgstr "Database strukturen synes ikke at være opdateret til nuværende version"
 msgid "Company subdirectories consistency"
 msgstr "Firma undermappers konsistens "
 
-#: includes/system_tests.inc:193
-#: includes/system_tests.inc:200
-#: includes/system_tests.inc:208
-#: includes/system_tests.inc:225
-#: includes/system_tests.inc:340
-#: includes/system_tests.inc:349
+#: includes/system_tests.inc:193 includes/system_tests.inc:200
+#: includes/system_tests.inc:208 includes/system_tests.inc:225
+#: includes/system_tests.inc:340 includes/system_tests.inc:349
 #: includes/system_tests.inc:358
 #, php-format
 msgid "'%s' is not writeable"
@@ -401,14 +405,12 @@ msgstr "System lokal: %s savnes"
 msgid "Main config file"
 msgstr "Hoved config fil"
 
-#: includes/system_tests.inc:295
-#: includes/system_tests.inc:317
+#: includes/system_tests.inc:295 includes/system_tests.inc:317
 #, php-format
 msgid "Can't write '%s' file. Check FA directory write permissions."
 msgstr "Kan ikke skabe '%s' filen. Undersøg mappens skrivbarhed."
 
-#: includes/system_tests.inc:296
-#: includes/system_tests.inc:318
+#: includes/system_tests.inc:296 includes/system_tests.inc:318
 #, php-format
 msgid "'%s' file exists."
 msgstr "'%s' filen findes allerede."
@@ -424,8 +426,11 @@ msgstr "Database Auth fil"
 
 #: includes/system_tests.inc:322
 #, php-format
-msgid "'%s' file should be read-only if you do not plan to add or change companies"
-msgstr "'%s' filen må være 'read-only' hvis du ikke har planer om at lægge till eller ændre firmaer."
+msgid ""
+"'%s' file should be read-only if you do not plan to add or change companies"
+msgstr ""
+"'%s' filen må være 'read-only' hvis du ikke har planer om at lægge till "
+"eller ændre firmaer."
 
 #: includes/system_tests.inc:333
 msgid "Extensions system"
@@ -441,12 +446,19 @@ msgid "Non-standard theme directory '%s' is not writable"
 msgstr "Ikke standard theme mappe '%s' er ikk skrivbar"
 
 #: includes/system_tests.inc:385
-msgid "OpenSSL PHP extension have to be enabled to use extension repository system."
-msgstr "OpenSSL PHP tillæg må være aktiv for at bruge tillægslagersystemet (FA Repository)"
+msgid ""
+"OpenSSL PHP extension have to be enabled to use extension repository system."
+msgstr ""
+"OpenSSL PHP tillæg må være aktiv for at bruge tillægslagersystemet (FA "
+"Repository)"
 
 #: includes/system_tests.inc:388
-msgid "OpenSSL have to be available on your server to use extension repository system."
-msgstr "OpenSSL må findes på din server for at bruge tillægslagersystem (FA Repository)"
+msgid ""
+"OpenSSL have to be available on your server to use extension repository "
+"system."
+msgstr ""
+"OpenSSL må findes på din server for at bruge tillægslagersystem (FA "
+"Repository)"
 
 #: includes/system_tests.inc:411
 msgid "Test"
@@ -471,29 +483,36 @@ msgstr "Ok"
 #: includes/packages.inc:190
 #, php-format
 msgid "No key field '%s' in file '%s'"
-msgstr ""
+msgstr "Intet nøglefelt '%s' i filen '%s'"
 
 #: includes/packages.inc:295
 msgid "Release file in repository is invalid, or public key is outdated."
 msgstr ""
+"Release felt i repository er ugyldig, eller også er public key for gammel."
 
 #: includes/packages.inc:311
 msgid "Repository version does not match application version."
-msgstr ""
+msgstr "Repository versionen matcher ikke program versionen."
 
 #: includes/packages.inc:325
 #, php-format
-msgid "Security alert: broken index file in repository '%s'. Please inform repository administrator about this issue."
+msgid ""
+"Security alert: broken index file in repository '%s'. Please inform "
+"repository administrator about this issue."
 msgstr ""
+"Sikkerhedsadvarsel: Indeks feltet i repository '%s' er brudt. Informer "
+"venligst repository administratoren om dette."
 
 #: includes/packages.inc:358
 #, php-format
-msgid "Security alert: broken package '%s' in repository. Please inform repository administrator about this issue."
+msgid ""
+"Security alert: broken package '%s' in repository. Please inform repository "
+"administrator about this issue."
 msgstr ""
+"Sikkerhedsadvarsel: Brudt pakke '%s' i repository. Venligst informer "
+"repository administratoren om dette."
 
-#: includes/packages.inc:613
-#: includes/packages.inc:664
+#: includes/packages.inc:613 includes/packages.inc:664
 #, php-format
 msgid "Package '%s' not found."
-msgstr ""
-
+msgstr "Pakke '%s' findes ikke."
