--- a/core/install/lang/sv_SE/LC_MESSAGES/sv_SE.po
+++ b/core/install/lang/sv_SE/LC_MESSAGES/sv_SE.po
@@ -7,18 +7,17 @@ msgstr ""
 "Project-Id-Version: PACKAGE Version\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2011-03-31 22:45+0100\n"
-"Last-Translator: Translation Team <info@frontaccounting.net>\n"
+"PO-Revision-Date: 2015-05-07 15:03+0100\n"
+"Last-Translator: Joe Hunt <joe.hunt.consulting@gmail.com>\n"
 "Language-Team: Language <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Swedish\n"
-"X-Poedit-Country: SWEDEN\n"
 "X-Poedit-SourceCharset: iso-8859-1\n"
+"Language: sv_SE\n"
+"X-Generator: Poedit 1.5.5\n"
 
-#: install/index.php:20
-#: install/index.php:40
+#: install/index.php:20 install/index.php:40
 msgid "FrontAccouting ERP Installation Wizard"
 msgstr "FrontAccounting ERP installationswizard"
 
@@ -31,23 +30,19 @@ msgstr "Steg %d: %s"
 msgid "Chart of accounts"
 msgstr "Kontoplaner"
 
-#: install/index.php:48
-#: install/index.php:75
+#: install/index.php:48 install/index.php:75
 msgid "Encoding"
 msgstr "Kodning"
 
-#: install/index.php:48
-#: install/index.php:75
+#: install/index.php:48 install/index.php:75
 msgid "Description"
 msgstr "Beskrivning"
 
-#: install/index.php:48
-#: install/index.php:75
+#: install/index.php:48 install/index.php:75
 msgid "Install"
 msgstr "Installera"
 
-#: install/index.php:65
-#: install/index.php:93
+#: install/index.php:65 install/index.php:93
 msgid "Installed"
 msgstr "Installerad"
 
@@ -56,8 +51,12 @@ msgid "Language"
 msgstr "Språk"
 
 #: install/index.php:123
-msgid "Cannot connect to database. User or password is invalid or you have no permittions to create database."
+msgid ""
+"Cannot connect to database. User or password is invalid or you have no "
+"permittions to create database."
 msgstr ""
+"Kan inte ansluta till databasen. Anvøndarnamnet eller lösenordet är ogiltig "
+"eller hu har inte tillgång att skapa databasen."
 
 #: install/index.php:159
 msgid "Cannot save system configuration file 'config.php'."
@@ -72,8 +71,12 @@ msgid "Cannot write to the 'config_db.php' configuration file."
 msgstr "Kan inte skriva till 'config_db.php konfigutionsfilen."
 
 #: install/index.php:172
-msgid "Configuration file 'config_db.php' is not writable. Change its permissions so it is, then re-run installation step."
-msgstr "Konfigurationsfilen 'config_db.php' är inte skrivbar. Ändra så att den ör skrivbar, och kör installationssteget igen."
+msgid ""
+"Configuration file 'config_db.php' is not writable. Change its permissions "
+"so it is, then re-run installation step."
+msgstr ""
+"Konfigurationsfilen 'config_db.php' är inte skrivbar. Ändra så att den ör "
+"skrivbar, och kör installationssteget igen."
 
 #: install/index.php:211
 msgid "Host name cannot be empty."
@@ -112,20 +115,25 @@ msgid "Select install wizard language:"
 msgstr "Välj installationswizardens språk:"
 
 #: install/index.php:324
-msgid "All application preliminary requirements seems to be correct. Please press Continue button below."
-msgstr "Alla programmets behov ser ut att vara korrekta. Vänligen tryck Fortsätt knappen nedan."
+msgid ""
+"All application preliminary requirements seems to be correct. Please press "
+"Continue button below."
+msgstr ""
+"Alla programmets behov ser ut att vara korrekta. Vänligen tryck Fortsätt "
+"knappen nedan."
 
-#: install/index.php:325
-#: install/index.php:351
-#: install/index.php:358
-#: install/index.php:365
-#: install/index.php:384
+#: install/index.php:325 install/index.php:351 install/index.php:358
+#: install/index.php:365 install/index.php:384
 msgid "Continue >>"
 msgstr "Fortsätt >>"
 
 #: install/index.php:327
-msgid "Application cannot be installed. Please fix problems listed below in red, and press Refresh button."
-msgstr "Programmet kan inte installeras. Vänligen fixa problemen som är beskrivna nedan och tryk Upprepa knappen."
+msgid ""
+"Application cannot be installed. Please fix problems listed below in red, "
+"and press Refresh button."
+msgstr ""
+"Programmet kan inte installeras. Vänligen fixa problemen som är beskrivna "
+"nedan och tryk Upprepa knappen."
 
 #: install/index.php:328
 msgid "Refresh"
@@ -155,17 +163,13 @@ msgstr "Databasnamn:"
 msgid "Use '0_' Table Prefix:"
 msgstr "Använd '0_' tabell prefix:"
 
-#: install/index.php:344
-#: includes/system_tests.inc:38
-#: includes/system_tests.inc:113
-#: includes/system_tests.inc:126
+#: install/index.php:344 includes/system_tests.inc:38
+#: includes/system_tests.inc:113 includes/system_tests.inc:126
 msgid "Yes"
 msgstr "Ja"
 
-#: install/index.php:344
-#: includes/system_tests.inc:38
-#: includes/system_tests.inc:113
-#: includes/system_tests.inc:126
+#: install/index.php:344 includes/system_tests.inc:38
+#: includes/system_tests.inc:113 includes/system_tests.inc:126
 msgid "No"
 msgstr "Nej"
 
@@ -178,16 +182,19 @@ msgid "Install Additional COAs from FA Repository:"
 msgstr "Installera ytterligare kontoplaner från FA lagret:"
 
 #: install/index.php:348
-msgid "Use table prefix if you share selected database for more than one FA company."
+msgid ""
+"Use table prefix if you share selected database for more than one FA company."
 msgstr "Använd tabell prefix om du delar databasen med flera än ett företag."
 
 #: install/index.php:349
-msgid "Do not select additional langs nor COAs if you have no working internet connection right now. You can install them later."
-msgstr "Välj inte ytterligare språk eller kontoplaner om du inte har någon fungerande internet förbindelse nu. Du kan installere dem senare."
+msgid ""
+"Do not select additional langs nor COAs if you have no working internet "
+"connection right now. You can install them later."
+msgstr ""
+"Välj inte ytterligare språk eller kontoplaner om du inte har någon "
+"fungerande internet förbindelse nu. Du kan installere dem senare."
 
-#: install/index.php:350
-#: install/index.php:357
-#: install/index.php:364
+#: install/index.php:350 install/index.php:357 install/index.php:364
 #: install/index.php:383
 msgid "<< Back"
 msgstr "<< Tillbaka"
@@ -234,7 +241,8 @@ msgstr "FrontAccounting ERP har installerats."
 
 #: install/index.php:389
 msgid "Please do not forget to remove install wizard folder."
-msgstr "Vänligen glöm inte att omdöpa eller ta bort installationswizrdens mapp."
+msgstr ""
+"Vänligen glöm inte att omdöpa eller ta bort installationswizrdens mapp."
 
 #: install/index.php:392
 msgid "Click here to start."
@@ -298,7 +306,8 @@ msgstr "Inte borttagen"
 
 #: includes/system_tests.inc:83
 msgid "Remove or rename install wizard folder for security reasons."
-msgstr "Ta bort eller omdöp installationswizardens mapp av säkerhetsmässiga orsaker."
+msgstr ""
+"Ta bort eller omdöp installationswizardens mapp av säkerhetsmässiga orsaker."
 
 #: includes/system_tests.inc:90
 msgid "Browser type"
@@ -354,18 +363,16 @@ msgstr "Nuvarande databasversion"
 
 #: includes/system_tests.inc:165
 msgid "Database structure seems to be not upgraded to current version"
-msgstr "Databasstruktur tycks inte ha blivit uppgraderat till nuvarande version"
+msgstr ""
+"Databasstruktur tycks inte ha blivit uppgraderat till nuvarande version"
 
 #: includes/system_tests.inc:180
 msgid "Company subdirectories consistency"
 msgstr "Företagsundermapp konsistens "
 
-#: includes/system_tests.inc:193
-#: includes/system_tests.inc:200
-#: includes/system_tests.inc:208
-#: includes/system_tests.inc:225
-#: includes/system_tests.inc:340
-#: includes/system_tests.inc:349
+#: includes/system_tests.inc:193 includes/system_tests.inc:200
+#: includes/system_tests.inc:208 includes/system_tests.inc:225
+#: includes/system_tests.inc:340 includes/system_tests.inc:349
 #: includes/system_tests.inc:358
 #, php-format
 msgid "'%s' is not writeable"
@@ -401,14 +408,12 @@ msgstr "System locale: %s saknas"
 msgid "Main config file"
 msgstr "Huvud config fil"
 
-#: includes/system_tests.inc:295
-#: includes/system_tests.inc:317
+#: includes/system_tests.inc:295 includes/system_tests.inc:317
 #, php-format
 msgid "Can't write '%s' file. Check FA directory write permissions."
 msgstr "Kan inte skriva till '%s' fil. Kolla FA mappens skrivbarhet."
 
-#: includes/system_tests.inc:296
-#: includes/system_tests.inc:318
+#: includes/system_tests.inc:296 includes/system_tests.inc:318
 #, php-format
 msgid "'%s' file exists."
 msgstr "'%s' filen finns redan."
@@ -424,8 +429,11 @@ msgstr "Databas Auth fil"
 
 #: includes/system_tests.inc:322
 #, php-format
-msgid "'%s' file should be read-only if you do not plan to add or change companies"
-msgstr "'%s' filen måste vara read-only om du inte planerar att lägga till eller ändra företag."
+msgid ""
+"'%s' file should be read-only if you do not plan to add or change companies"
+msgstr ""
+"'%s' filen måste vara read-only om du inte planerar att lägga till eller "
+"ändra företag."
 
 #: includes/system_tests.inc:333
 msgid "Extensions system"
@@ -441,11 +449,14 @@ msgid "Non-standard theme directory '%s' is not writable"
 msgstr "Icke standard theme mapp '%s' är inte skrivbar"
 
 #: includes/system_tests.inc:385
-msgid "OpenSSL PHP extension have to be enabled to use extension repository system."
+msgid ""
+"OpenSSL PHP extension have to be enabled to use extension repository system."
 msgstr "OpenSSL PHP tillägget måste vara aktivt för att använda tillägslagret"
 
 #: includes/system_tests.inc:388
-msgid "OpenSSL have to be available on your server to use extension repository system."
+msgid ""
+"OpenSSL have to be available on your server to use extension repository "
+"system."
 msgstr "OpenSSL måste finnas på din server för att använda tillägslagret."
 
 #: includes/system_tests.inc:411
@@ -471,29 +482,37 @@ msgstr "Ok"
 #: includes/packages.inc:190
 #, php-format
 msgid "No key field '%s' in file '%s'"
-msgstr ""
+msgstr "Inget nyckel fält '%s' i filen '%s'"
 
 #: includes/packages.inc:295
 msgid "Release file in repository is invalid, or public key is outdated."
 msgstr ""
+"Release filen i repository är ogiltig, eller också är publika nyckeln "
+"ogiltig."
 
 #: includes/packages.inc:311
 msgid "Repository version does not match application version."
-msgstr ""
+msgstr "Repository versionen matchar inte program versionen."
 
 #: includes/packages.inc:325
 #, php-format
-msgid "Security alert: broken index file in repository '%s'. Please inform repository administrator about this issue."
+msgid ""
+"Security alert: broken index file in repository '%s'. Please inform "
+"repository administrator about this issue."
 msgstr ""
+"Säkerhetsvarning: Bruten indes fil i repository '%s'. Vänligen informera "
+"repository administratorn om detta."
 
 #: includes/packages.inc:358
 #, php-format
-msgid "Security alert: broken package '%s' in repository. Please inform repository administrator about this issue."
+msgid ""
+"Security alert: broken package '%s' in repository. Please inform repository "
+"administrator about this issue."
 msgstr ""
+"Säkerhetsvarning: Brutet paket '%s' i repository. Vänligen informera "
+"repository administratorn om detta."
 
-#: includes/packages.inc:613
-#: includes/packages.inc:664
+#: includes/packages.inc:613 includes/packages.inc:664
 #, php-format
 msgid "Package '%s' not found."
-msgstr ""
-
+msgstr "Paket '%s' finns ej."
