Upstream Synch as of 2015-08-29 PDF documents sent by email have now meaningful names. https://github.com/FrontAccountingERP/FA/commit/104460ae3eca1e1d53ad5e4541d076c967421c1c Void a Transaction: fixed GRN voiding. https://github.com/FrontAccountingERP/FA/commit/582e4a2443d9ed6ca67f47c05b7d92772b53b805 Fixed sparse js dialog when canceling sales document entry. https://github.com/FrontAccountingERP/FA/commit/1239da76a5ce623d5b27ca5eeb6cc88b78f3502b All changes can be backported http://frontaccounting.com/punbb/viewtopic.php?pid=24145#p24145

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,7 @@
 
+2015-08-29 Janusz Dobrowolski Fixed sparse js dialog when canceling sales document entry.
+2015-08-29 Janusz Dobrowolski Void a Transaction: fixed GRN voiding.
+2015-08-29 Janusz Dobrowolski PDF documents sent by email have now meaningful names.
 2015-08-25 Janusz Dobrowolski Small warning cleanup in purchase order report.
 2015-07-28 Joe Hunt           Added undefined function cache_invalidate() in install/isession.inc
 2015-07-27 Joe Hunt           en_US-demo.sql and en_US-new.sql cleanup
