--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-11-05 Janusz Dobrowolski Receive Purchase Order Items: invalid date was passed to reference number provider.
 2015-11-05 Joe Hunt           faulty escape in empty.po - Problem Source
 2015-11-05 Joe Hunt           faulty escape in empty.po
 2015-09-23 Janusz Dobrowolski [0003305] Direct Purchase Invoice: added link to payment entry on final page.
