faulty escape in empty.po https://github.com/FrontAccountingERP/FA/commit/045b2e0c7959cede9e14e8b7e0cee6dbe514d088 http://frontaccounting.com/punbb/viewtopic.php?id=6006

--- a/core/lang/new_language_template/LC_MESSAGES/empty.po
+++ b/core/lang/new_language_template/LC_MESSAGES/empty.po
@@ -8396,7 +8396,7 @@ msgid "Items"
 msgstr ""
 
 #: /includes/ui/ui_controls.inc:666
-msgid "Entered data has not been saved yet.\\nDo you want to abandon changes?"
+msgid "Entered data has not been saved yet.\nDo you want to abandon changes?"
 msgstr ""
 
 #: /includes/ui/ui_input.inc:656
