--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-11-05 Joe Hunt           faulty escape in empty.po
 2015-09-23 Janusz Dobrowolski [0003305] Direct Purchase Invoice: added link to payment entry on final page.
 2015-09-23 Janusz Dobrowolski [0003304] Purchase Order Entry: fixed support for editable items description.
 2015-08-31 Janusz Dobrowolski Small cleanups in mail class.
