Cleanup Comments and small bugfixes - 3 runs https://github.com/FrontAccountingERP/FA/commit/92516cf782e07af078fab627e35c75c822702ab2 https://github.com/FrontAccountingERP/FA/commit/a2ae0e35302270ae811db2e6acb44c16b186a970 https://github.com/FrontAccountingERP/FA/commit/e9ad9e87f5eb2682d2e91c93134250fd8a8d2ad9

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-11-5/8 Joe Hunt          Cleanup Comments and small bugfixes
 2015-11-05 Janusz Dobrowolski Global fixes in SQL queries formatted for readability - TBPREF replaced with table alias.
 2015-11-05 Janusz Dobrowolski Print Deliveries: Fixed not working print as packing slip option.
 2015-11-05 Janusz Dobrowolski Print Remittances: fixed usage of sys_prefs 'print_invoice_no' option.
