--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-11-09 Joe Hunt           Supplier Invoice/Credit Note. Moved Dimensions entry from left section to middle section for better layout.
 2015-11-09 Janusz Dobrowolski Fixed bug in price_format() helper leading to problems in various entry forms (e.g. Supplier/Customer Allocation)
 2015-11-09 Janusz Dobrowolski Customer Transaction Inquiry, Supplier Inquiry: fixed icons for closed transactions.
 2015-11-09 Janusz Dobrowolski Supplier Invoices, Supplier Credit Notes: fixed edit form bugs, fixed reference to missing $invoice_no variable in add_supp_invoice().
