--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-11-09 Joe Hunt           Fixed tabbed dialogs. Removed redundant 'popup' variables.
 2015-11-09 Joe Hunt           Fixing check for non supplier reference. Cleanup.
 2015-11-09 Joe Hunt           Transaction Inquiry inside Supplier fixed.
 2015-11-09 Joe Hunt           Supplier Invoice/Credit Note. Moved Dimensions entry from left section to middle section for better layout.
