--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-11-12 Janusz Dobrowolski Transaction type number => type name referneces fixed.
 2015-11-11 Janusz Dobrowolski TB_PREF cleanups in SELECT, WHERE and ORDER BY clauses in sql statements
 2015-11-10 Joe Hunt           Cleanup comments and small bugfixes
 2015-11-09 Joe Hunt           Fixed tabbed dialogs. Removed redundant 'popup' variables.
