--- a/core/install/lang/es_MX/LC_MESSAGES/es_MX.po
+++ b/core/install/lang/es_MX/LC_MESSAGES/es_MX.po
@@ -390,7 +390,7 @@ msgstr "Falta archivo de traducción %s"
 #: /includes/system_tests.inc:276
 #, php-format
 msgid "Missing system locale: %s"
-msgstr "Falta configuración regional del sistema:"
+msgstr "Falta configuración regional del sistema: %s"
 
 #: /includes/system_tests.inc:289
 msgid "Main config file"
@@ -399,7 +399,7 @@ msgstr "Archivo de configuración principal"
 #: /includes/system_tests.inc:296 /includes/system_tests.inc:318
 #, php-format
 msgid "Can't write '%s' file. Check FA directory write permissions."
-msgstr "No se puede escribir el archivo '% s'. Compruebe que el sistema tiene permisos de escritura."
+msgstr "No se puede escribir el archivo '%s'. Compruebe que el sistema tiene permisos de escritura."
 
 #: /includes/system_tests.inc:297 /includes/system_tests.inc:319
 #, php-format
@@ -409,7 +409,7 @@ msgstr "Ya existe el archivo '%s'"
 #: /includes/system_tests.inc:301
 #, php-format
 msgid "'%s' file should be read-only"
-msgstr "El archivo '% s' debe ser de sólo lectura"
+msgstr "El archivo '%s' debe ser de sólo lectura"
 
 #: /includes/system_tests.inc:310
 msgid "Database auth file"
@@ -418,7 +418,7 @@ msgstr "Archivo de autenticación de base de datos"
 #: /includes/system_tests.inc:323
 #, php-format
 msgid "'%s' file should be read-only if you do not plan to add or change companies"
-msgstr "El archivo '% s' debe ser de sólo lectura si no vas a agregar o cambiar empresa"
+msgstr "El archivo '%s' debe ser de sólo lectura si no vas a agregar o cambiar empresa"
 
 #: /includes/system_tests.inc:334
 msgid "Extensions system"
@@ -431,7 +431,7 @@ msgstr "Los archivos y directorios de configuración de extensiones deben tener p
 #: /includes/system_tests.inc:385
 #, php-format
 msgid "Non-standard theme directory '%s' is not writable"
-msgstr "El directorio del tema '% S' no tiene permisos de escritura"
+msgstr "El directorio del tema '%s' no tiene permisos de escritura"
 
 #: /includes/system_tests.inc:395
 msgid "OpenSSL PHP extension have to be enabled to use extension repository system."
