Fixed Assets application added with fixes New Fixed Assets Report file https://github.com/FrontAccountingERP/FA/commit/9ee6bdf0637884fd52d4b573bdb9d96ae2ae32a3 Fixed layout, changes, bugs and improvements to Fixed Assets application https://github.com/FrontAccountingERP/FA/commit/d4bcee971cf7ea37e2afc9d6abeb16d00af20de8 Added fixed assets module https://github.com/FrontAccountingERP/FA/commit/fd069bba86276f15311ff6ab10b22d4a06a55513

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-01 Janusz Dobrowolski Fixed Assets application added with fixes by Joe Hunt.
 2015-12-01 Janusz Dobrowolski Fixed es_MX installer translation files
 2015-11-16 Janusz Dobrowolski Fixed regression in Sales Invoice.
 2015-11-12 Janusz Dobrowolski Transaction type number => type name referneces fixed.
