--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-09 Joe Hunt           Fixed a hardcoded amount_row with fixed 2 decimals. Removed and the default user_price_dec() is used
 2015-12-09 Ap.Muthu           Synched default value of depreciation_method in upgrade script to that in standard charts
 2015-12-7/9 Janusz Dobrowolski Fixed Assets application fixes
 2015-12-02 Ap.Muthu           Fixed typo in en_US-new.sql: Finsihed => Finished
