Removed popup search for Fixed Assets and rerun Removed fixed assets from list item search and popup search. https://github.com/FrontAccountingERP/FA/commit/658a1ea0bde1951d966ff0560e24a62e3cdde6e6 Rerun of last non fixed assets search. https://github.com/FrontAccountingERP/FA/commit/d5c036f01e41b7acbf36eb00a298aa2a3edfe044 http://frontaccounting.com/punbb/viewtopic.php?pid=24909#p24909

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-11 Joe Hunt           Removed popup search for Fixed Assets and rerun
 2015-12-10 Joe Hunt           Fixed popup search
 2015-12-09 Janusz Dobrowolski Further Fixed Assets application fixes and search pop-ups.
 2015-12-09 Joe Hunt           Fixed a hardcoded amount_row with fixed 2 decimals. Removed it for the default user_price_dec() is used
