--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-11 Joe Hunt           stock_master table field actual_cost => purchase_cost in standard charts
 2015-12-11 Joe Hunt           Removed popup search for Fixed Assets and rerun
 2015-12-10 Joe Hunt           Fixed popup search
 2015-12-09 Janusz Dobrowolski Further Fixed Assets application fixes and search pop-ups.
