Exchange Rates: removed sparse home currency from selector. https://github.com/FrontAccountingERP/FA/commit/b4708f467e849d3b0a94bf67bc44331d0aa6827b Removes Home Currency from the currency drop down box in the exchange rate form.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,5 @@
 
+2015-12-11 Janusz Dobrowolski Exchange Rates: removed sparse home currency from selector.
 2015-12-11 Joe Hunt           stock_master table field actual_cost => purchase_cost in standard charts
 2015-12-11 Joe Hunt           Removed popup search for Fixed Assets and rerun
 2015-12-10 Joe Hunt           Fixed popup search
